--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,19 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+/.idea/.generators
+/.idea/.name
+/.idea/.rakeTasks
+/.idea/dataSources.ids
+/.idea/dataSources.xml
+/.idea/encodings.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/runConfigurations/Development__zombiekicker.xml
+/.idea/runConfigurations/Production__zombiekicker.xml
+/.idea/runConfigurations/spec__zombiekicker.xml
+/.idea/runConfigurations/test__zombiekicker.xml
+/.idea/scopes/scope_settings.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+/.idea/zombiekicker.iml
